_sass/minimal-mistakes/_page.scss
/* ... */
body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
          flex-direction: column;
}

.initial-content,
.search-content {
  flex: 1 0 auto;
}

.page {
  @include breakpoint($large) {
    float: inline-end;
    width: calc(100% - #{$right-sidebar-width-narrow});
    /* padding-inline-end: $right-sidebar-width-narrow; */
  }

  @include breakpoint($x-large) {
    width: calc(100% - #{$right-sidebar-width});
    /* padding-inline-end: $right-sidebar-width; */
  }

  .page__inner-wrap {
    float: inline-start;
    margin-top: 1em;
    margin-inline: 0;
    width: 100%;
    clear: both;

    .page__content,
    .page__meta,
    .page__share {
      position: relative;
      float: inline-start;
      margin-inline: 0;
      width: 100%;
      clear: both;
    }
  }
}

.page__title {
  margin-top: 0;
  line-height: 1;
  a {
    color: $text-color;
    text-decoration: none;
  }

  & + .page__meta {
    margin-top: -0.5em;
  }
}

.page__lead {
  font-family: $global-font-family;
  font-size: $type-size-4;
  width: calc(100% - #{$right-sidebar-width-narrow});
}

.page__content {
    
  --leftmarg: 0em;
    
  h2 {
    padding-bottom: 0.5em;
    border-bottom: 2px solid $border-color;
  }
    

    
  h1, h2, h3, h4, h5, h6 {
		.header-link {
			position: relative;
			inset-inline-start: 0.5em;
			opacity: 0;
			font-size: 0.8em;
			-webkit-transition: opacity 0.2s ease-in-out 0.1s;
			-moz-transition: opacity 0.2s ease-in-out 0.1s;
			-o-transition: opacity 0.2s ease-in-out 0.1s;
			transition: opacity 0.2s ease-in-out 0.1s;
		}

		&:hover .header-link {
			opacity: 1;
		}
	}

  p,
  li,
  dl {
    font-size: 1em;
  }

  /* paragraph indents */
  p {
    margin-top: 0;
    margin-right: 0;
    margin-bottom: $indent-var;

    /* sibling indentation*/
    @if $paragraph-indent == true {
      & + p {
        text-indent: $indent-var;
        margin-top: -($indent-var);
      }
    }
  }

  a:not(.btn) {
    &:hover {
      text-decoration: underline;

      img {
        box-shadow: 0 0 10px rgba(#000, 0.25);
      }
    }
  }

  :not(pre) > code {
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    font-size: 0.8em;
    background: $code-background-color;
    border-radius: $border-radius;

    &::before,
    &::after {
      letter-spacing: -0.2em;
      content: "\00a0"; /* non-breaking space*/
    }
  }

  dt {
    margin-top: 1em;
    font-family: $sans-serif;
    font-weight: bold;
  }

  dd {
    margin-inline-start: 1em;
    font-family: $sans-serif;
    font-size: $type-size-6;
  }

  .small {
    font-size: $type-size-6;
  }

  /* blockquote citations */
/*
  blockquote + .small {
    margin-top: -1.5em;
    padding-inline-start: 1.25rem;
  }
    */

  /* extra large button */
    p,
    li,
    dl,
    pre,
    code,
    dt,
    dd,
    .small,
    :not(pre) > code {
        margin-left: var(--leftmarg); /* Adjust the value as needed */
    }
    
    h4, h5, h6 {
        margin-left: var(--leftmarg);
        margin-top: 1em;
        
    }
    
    /*
    h3 {
        padding-bottom: 0.5em;
        border-bottom: 1px solid $border-color;
        
        &::after {
            content: "";
            border-bottom: 1px solid $background-color;
        }
    }
    */
}

.page__content--indent {
  --leftmarg: 1em;
}

.page__content blockquote {
    margin-left: var(--leftmarg);;
    margin-block: 1em;
    padding-left: 0.5em;
    padding-block: 0;
    padding-right: 0;
    border-left: 0.5em solid $primary-color;
    font-style: italic; /* Italic text */
    font-size: $type-size-7;
    
    p {
        margin: 0;
        padding-top: 0;
        padding-bottom: 0;
        padding-right: 0;
        padding-left: 0.5em;
    }
}

.page__content blockquote cite {
    display: block;
    padding-right: 1.5em;
    margin-top: 10px; /* Margin above the cite */
    font-style: normal; /* Normal font style for the cite */
    text-align: right; /* Align cite to the right */
    color: #333; /* Color of the cite */
}

.page__content blockquote cite::before {
    padding-inline-end: 2.5px;
    content: "\2014 \00A0"; /* Em dash with a non-breaking space */
}

.page__content .quote__container {
  display: flex;
  flex-wrap: nowrap; /* Allows items to wrap onto the next line if needed */
  flex-direction: row;
  gap: 0px; /* Space between items */
  margin-left: var(--leftmarg);
  margin-block: 0.5em;
  /* align-items: center; */
}



.page__content .quote__container .quote__minipage {
  flex: 1; /* Each minipage takes up equal space */
  margin-left: 0; 
  margin-right: 0; 
  margin-block: 0; 
  padding: 0; 
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: center; */
}


/* Block quote styles inside .minipage */
.page__content .quote__container .quote__minipage blockquote {
  margin: 0 0; /* Vertical margin */
  padding-block: 0em;
  padding-left: 1em;
  padding-right: 0em;
  border-left: 0;
  font-style: italic; /* Italic text */
  font-size: $type-size-7;
}

.page__content .quote__container .quote__minipage blockquote cite {
  display: block;
  margin-top: 10px; /* Margin above the cite */
  font-style: normal; /* Normal font style for the cite */
  text-align: right; /* Align cite to the right */
  color: #333; /* Color of the cite */
}

.page__content .quote__container .quote__minipage blockquote cite::before {
  content: "\2014 \00A0"; /* Em dash with a non-breaking space */
}
/* ... */

